--- a/_posts/javascript/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
+++ b/_posts/javascript/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
@@ -293,8 +293,8 @@ state로 상태를 전달해주고, setState로 전달받은 새로운 값으로
 
 [참고]
 
-모던 자바스크립트 딥다이브 (http://www.yes24.com/Product/Goods/92742567)
+- [모던 자바스크립트 딥다이브](http://www.yes24.com/Product/Goods/92742567)
 
-poiemaweb (https://poiemaweb.com/js-execution-context)
+- [poiemaweb](https://poiemaweb.com/js-execution-context)
 
-Deep dive: How do React hooks really work? (https://www.netlify.com/blog/2019/03/11/deep-dive-how-do-react-hooks-really-work/)
+- [Deep dive: How do React hooks really work?](https://www.netlify.com/blog/2019/03/11/deep-dive-how-do-react-hooks-really-work/)
