--- a/_posts/javascript/_posts/2022-12-09-this.md
+++ b/_posts/javascript/_posts/2022-12-09-this.md
@@ -274,6 +274,5 @@ this 바인딩은 예상치 못하는 에러를 만들 수 있기 때문에 꼭 
 
 [참고]
 
-모던 자바스크립트 딥다이브: http://www.yes24.com/Product/Goods/92742567
-
-this 바인딩: https://doqtqu.tistory.com/307#2.2.%20Binding%20%EA%B7%9C%EC%B9%99
+[모던 자바스크립트 딥다이브](http://www.yes24.com/Product/Goods/92742567)
+[this 바인딩](https://doqtqu.tistory.com/307#2.2.%20Binding%20%EA%B7%9C%EC%B9%99)
