--- a/_posts/javascript/_posts/2022-12-12-생성자함수, 프로토타입.md
+++ b/_posts/javascript/_posts/2022-12-12-생성자함수, 프로토타입.md
@@ -682,6 +682,5 @@ console.log(Object.values(Person)); // ["choi"]
 
 [참고]
 
-모던 자바스크립트 딥다이브: http://www.yes24.com/Product/Goods/92742567
-
-프로토타입 : https://poiemaweb.com/js-prototype
+[모던 자바스크립트 딥다이브](http://www.yes24.com/Product/Goods/92742567)
+[프로토타입](https://poiemaweb.com/js-prototype)
