--- a/_posts/javascript/_posts/2022-12-30-이벤트.md
+++ b/_posts/javascript/_posts/2022-12-30-이벤트.md
@@ -535,8 +535,8 @@ this를 인스턴스로 바인딩 시켜주기 위해서는 함수에 직접 bin
 
 [참조]
 
-Throttling과 debouncing: https://www.zerocho.com/category/JavaScript/post/59a8e9cb15ac0000182794fa
+[Throttling과 debouncing](https://www.zerocho.com/category/JavaScript/post/59a8e9cb15ac0000182794fa)
 
-모던 자바스크립트 딥다이브: http://www.yes24.com/Product/Goods/92742567
+[모던 자바스크립트 딥다이브](http://www.yes24.com/Product/Goods/92742567)
 
-이벤트 : https://poiemaweb.com/js-event
+[이벤트](https://poiemaweb.com/js-event)
