--- a/_posts/javascript/_posts/2022-09-06-BEM과 자료형.md
+++ b/_posts/javascript/_posts/2022-09-06-BEM과 자료형.md
@@ -26,7 +26,7 @@ class간의 충돌을 피하기 위해 사용한다.
 
 ![Inside a card component, buttons can be a BEM element](https://scalablecss.com/static/04158e912667d940eeb914f724379072/37523/nesting-elements-within-block.png)
 
-[출처:https://scalablecss.com/bem-blocks-within-blocks/ ]
+[그림 출처, scalableCss](https://scalablecss.com/bem-blocks-within-blocks/)
 
 위와 같은 그림에서 큰 component에 해당하는 card가 block, component를 이루고 있는 image, title, description,button이 element에 해당되게 된다.
 
@@ -134,8 +134,7 @@ undefined의 경우에 말 그대로 아직 정해지지 않아 변수가 선언
 
 null의 경우에는 변수가 선언되고 메모리에 비어있는 object가 할당되어 있는 상태를 가리킨다.
 
-- 여기서 특이한 점은 null의 type이 object라는 점이다. primitive 자료형이지만 type으로는 null을 가리키고 있는데 이러한 아이러니는
+- 여기서 특이한 점은 null의 type이 object라는 점이다. primitive 자료형이지만 type으로는 null을 가리키고 있는데 이러한 아이러니는 초기 자바스크립트를 개발하면서 생긴 오류라고 한다.
 
-  초기 자바스크립트를 개발하면서 생긴 오류라고 한다.
-
-  [출처:https://blog.naver.com/gofkdvjvl/222166705113]
+[참조]
+[null===object에 대한 고찰](https://blog.naver.com/gofkdvjvl/222166705113)
