--- a/_posts/javascript/_posts/2022-12-23-class.md
+++ b/_posts/javascript/_posts/2022-12-23-class.md
@@ -5,7 +5,7 @@ categories:
   - javascript
 ---
 
-# 👓Class
+# 👓 Class
 
 자바스크립트 자체는 프로토타입을 기반으로 객체지향을 지원하는 언어다. 클래스는 클래스에 익숙한 개발자들을 위한 프로토타입의 `문법적 설탕`이라고 불린다. 하지만 클래스가 자바스크립트 내에서 동작하는 방식에 차이점이 존재한다. 클래스에 대해서 알아보자
 
@@ -419,6 +419,5 @@ super호출로 Circle클래스는 인스턴스를 생성하기 위해 먼저 `{}
 
 생성자 함수와 프로토타입을 이해하고 클래스를 다시 보면서 공통점과 차이점을 새롭게 알게 되었다. 이후에 타입스크립트에서 좀 더 강력한 객체 지향 요소들을 함께 정리할 예정이다.
 
-모던 자바스크립트 딥다이브: http://www.yes24.com/Product/Goods/92742567
-
-프로토타입 : https://poiemaweb.com/es6-class
+[모던 자바스크립트 딥다이브](http://www.yes24.com/Product/Goods/92742567)
+[프로토타입](https://poiemaweb.com/es6-class)
