--- a/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
+++ b/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
@@ -90,7 +90,7 @@ git rm -r --cached filename
 
 
 [당시 발생했던 tsc 에러]
-<img src="./../../../assets/img/2023-02-17-취업준비 회고/image-20230222005433013.png">
+<img src="./../../../assets/img/2023-03-31-개발자-한달차-회고/image-20230402155550414.png">
 
 
 tsc 에러가 더 어려웠던 것은 나와 유사한 에러를 경험한 사람을 찾을 수가 없었기 때문이었다. 그나마 찾아낸 방법은 tsconfig.json에 옵션을 추가하는 방법이었는데 이렇게 해도 해결이 되지 않았다. 
