--- a/_posts/review/_posts/2023-06-05-5월-회고.md
+++ b/_posts/review/_posts/2023-06-05-5월-회고.md
@@ -23,7 +23,7 @@ categories:
 
 [완성된 요청 견적서 화면]
 
-<video src="../../../../../Desktop/Simulator Screen Recording - iPhone 13 - 2023-06-06 at 16.10.55.mp4" width=300></video>
+<video src="./../../../Desktop/Simulator Screen Recording - iPhone 13 - 2023-06-06 at 16.10.55.mp4" width=300></video>
 
 
 
@@ -199,9 +199,13 @@ if (__DEV__) {
 </tr>
 </table>
 
+#### 그럼 어떻게 하면 좋을까?
+
+위에 조사한 내용으로 총 3가지 방법이 떠올랐다. RN을 0.68이상으로 업그레이드하거나, RN Debugger client 버전을 downgrade해서 `0.12.1`로 사용하는 방법, 마지막으로 outdated된 패키지들 정리 후에 react-devtools-core 4.23.0 버전도 설치하는 방법이다. 이중에서 우선 가장 적은 비용으로 사용가능한 `0.12.1`버전으로 사용하는 방법을 공유했다.
 
 
 
+사실 큰 작업은 아닐 수 있지만 5월 한달 목표로 잡았던 DX 개선 작업중 하나인 RN Debugger의 React-devtools를 사용할 수 있게 하는 작업의 결론을 낼 수 있었고, 기술 공유시간에 발표도 할 수 있어서 좋은 기회가 되었다.
 
 
 
